Scraper#title now uses council short_name for title (was unnecessarily long). Bugfixes: use flash.now not flash[:now]. doh! Don't use border or b/g for warning otherwise flash box is always visible

--- a/public/stylesheets/twfy_local.css
+++ b/public/stylesheets/twfy_local.css
@@ -88,13 +88,14 @@ margin-left:2em;
 	color: #9e9e9e;
 }
 .warning, .alert {
-	border: 1pt solid #FBC2C4; 
-	background-color: #FBE3E4;
-	padding:.5em;
 	font-size: 120%;
 	font-weight:bold;
 	color: #8a1f11;}
-
+.alert {
+	border: 1pt solid #FBC2C4; 
+	background-color: #FBE3E4;
+	padding:.5em;
+}
 /*General template format*/
 body { 
 	background-color:#ddd; }
